# mkid_detect

./: LICENSE  README.md  pyproject.toml  setup.py
mkid_detect/: cosmic_rays.py  mkid_detect.py  photon_list.py  utils.py
src/mkid_detect/: cosmic_rays.py  logger.py  mkid_detect.py  photon_list.py  utils.py
src/mkid_detect/arrival_time_statistics/: gamma.py  modified_rician.py  poisson.py  statistics_utils.py
