[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mkid_detect"
authors = [
{ name = "Sarah Steiger", email = "ssteiger@stsci.edu" },
]
description = "A tool for generating simulated MKID outputs."
dependencies = ["matplotlib", "numpy", "hcipy", "tables"]
license = { file = "LICENSE" }
dynamic = ['readme', 'version']
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/steigersg/mkid_detect"
Issues = "https://github.com/steigersg/mkid_detect/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "mkid_detect/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[project.optional-dependencies]
docs = [
  "sphinx",
  "myst-nb",
  "sphinx-book-theme",
  "sphinx-autoapi",
  "sphinx_autodoc_typehints",
  "matplotlib",
]
test = ["nox", "pytest", "hypothesis", "pytest-cov"]

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"
