[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[project]
name = "mkid_detect"
authors = [
{ name = "Sarah Steiger", email = "ssteiger@stsci.edu" },
]
description = "A tool for generating simulated MKID outputs."
dependencies = ["matplotlib", "numpy", "hcipy", "tables"]
license = { file = "LICENSE" }
readme = "README.md"
version= "0.1.0"
requires-python = ">=3.7"

[tool.hatch.build.targets.wheel]
packages = ["src/mkid_detect"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/steigersg/mkid_detect"
Issues = "https://github.com/steigersg/mkid_detect/issues"
